name:                wai-control
version:             0.1.0.0
synopsis:            Give wai Applications an IO-based inner monad
-- description:
license:             BSD3
license-file:        LICENSE
author:              Felix Springer
maintainer:          felixspringer149@gmail.com
homepage:            https://github.com/jumper149/wai-control
bug-reports:         https://github.com/jumper149/wai-control/issues
category:            Control, Web
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     Network.Wai.Trans
                       Network.Wai.Handler.WebSockets.Trans
  build-depends:       base                   >= 4.5      && < 5
                     , transformers-base      >= 0.4.5.2  && < 0.5
                     , monad-control-identity >= 0.1.0.1  && < 1.1
                     , wai                    >= 3.2      && < 3.3
                     , wai-websockets         >= 3.0.1.2  && < 3.1
                     , websockets             >= 0.12.5.3 && < 0.13
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
